Archive2/ba/f5bc71d01b3365/output
main.cpp:6:10: error: array initializer must be an initializer list
  string s[5] = "hello";
         ^
1 error generated.
